<resources>

    <!-- These names appear in the toolbar -->
    <string name="app_name">Praxis</string>
    <string name="title_activity_leaderboard">Leaderboard</string>

    <!-- Menu Items - Autogenerated by Android -->
    <string name="action_settings">Settings</string>

    <!-- Menu Items -->
    <string name="quiz_mode">New Quiz</string>
    <string name="test_mode">New Test</string>
    <string name="view_leaderboard">View Leaderboard</string>

    <!-- Buttons -->
    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>
    <string name="deleteDB_button">Clear Scores</string>

    <!-- End Dialog -->
    <string name="questions_complete_title">Congratulations!</string>
    <string name="quiz_dialog">You finished this quiz with flying colors!</string>
    <string name="test_dialog">You finished this test with a score of %1$d%%!</string>

    <!-- Feedback Messages for Text Views, Toasts, etc. -->
    <string name="correct_message">Correct!</string>
    <string name="incorrect_message">Incorrect!</string>
    <string name="error_message">Correct!</string>
    <string name="no_answer_selected">Please select an answer.</string>

    <!-- For cheating -->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show correctAnswer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judment_toast">Cheating is wrong.</string>

    <!-- Leaderboard -->
    <string name="leaderboard_title">Leaderboard</string>
    <string name="bronze_title">Bronze Level</string>
    <string name="silver_title">Silver Level</string>
    <string name="gold_title">Gold Level</string>
    <string name="score_title">Previous Scores</string>
    <string name="avg_score">Your average test score is currently %1$d%%.</string>

    <!-- Locked Badges -->
    <string name="locked_bronze">Complete 5 quizzes.</string>
    <string name="locked_silver">Complete 1 test with 100% score.</string>
    <string name="locked_gold">Complete 5 tests with a 90%+ average.</string>

    <!-- Unlocked Badges -->
    <string name="unlocked_bronze">You completed 5 quizzes!</string>
    <string name="unlocked_silver">You completed 1 test with 100% score!</string>
    <string name="unlocked_gold">You completed 5 tests with a 90% or higher average!</string>

    <!-- Wouldn't run on 4-26-19. Where are they used? -->
    <string name="answer_a">15</string>
    <string name="answer_b">50</string>
    <string name="answer_c">2</string>
    <string name="answer_d">5</string>

    <string name="answer_A">A</string>
    <string name="answer_B">B</string>
    <string name="answer_C">C</string>
    <string name="answer_D">D</string>

</resources>
